Updates important project dependencies and accommodate changes in code